@@ -4,7 +4,6 @@ import lombok.extern.slf4j.Slf4j;
 
 import java.util.List;
 import java.util.Random;
-import java.util.stream.Collectors;
 
 import no.nav.testnav.libs.dto.helsepersonell.v1.HelsepersonellListeDTO;
 
@@ -17,7 +16,7 @@ public class HelsepersonellListe {
         list = dto.getHelsepersonell()
                 .stream()
                 .map(Helsepersonell::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Helsepersonell getRandomLege() {
